<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2014 Braden Farmer

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.

-->

<resources>

    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_discard">Discard</string>
    <string name="action_edit">Edit</string>
    <string name="action_export">Export</string>
    <string name="action_new">New Note</string>
    <string name="action_import">Import</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_sort_by">Sort notes by</string>
    <string name="app_name">Notepad</string>
    <string name="cab_note_selected">note selected</string>
    <string name="cab_notes_selected">notes selected</string>
    <string name="changes_discarded">Changes discarded</string>
    <string name="dialog_about_message">Notepad: a simple note-taking app\n\n&#169; 2015 Braden Farmer\n\nThis app\'s <a href="http://github.com/farmerbb/Notepad">source code</a> is licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0</a>, except where noted below:\n\nThis app uses code derived from the <a href="https://github.com/makovkastar/FloatingActionButton">FloatingActionButton</a> project, licensed under the MIT License.\n\nThis app uses graphical assets from the following sources:\n\n&#8226; <a href="http://deleket.deviantart.com">Notepad icon (deleket)</a> <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/legalcode">(CC BY-NC-ND 3.0)</a>\n\n&#8226; <a href="http://shreyasachar.github.io/AndroidAssetStudio/">Android Asset Studio for Material Design"</a> <a href="http://creativecommons.org/licenses/by/3.0/">(CC-BY-3.0)</a></string>
    <string name="dialog_about_title">About Notepad</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="dialog_delete_button_title">Delete note</string>
    <string name="dialog_save_button_title">Save changes</string>
    <string name="dialog_save_changes">Do you want to save your changes?</string>
    <string name="draft_restored">Draft restored</string>
    <string name="draft_saved">Draft saved</string>
    <string name="double_tap">Tip: double-tap text to switch to Edit mode</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_text">Type to add text</string>
    <string name="empty_note">Please enter some text!</string>
    <string name="error_exporting_notes">Error exporting notes!</string>
    <string name="error_importing_notes">Error importing notes!</string>
    <string name="error_loading_list">Error loading list of notes!</string>
    <string name="error_loading_note">Error loading note!</string>
    <string name="failed_to_save">Error: Failed to save note!</string>
    <string name="first_run">Welcome to Notepad!\n\nTo create a note, click the New Note button (plus sign).</string>
    <string name="first_view">To edit a saved note, double-tap the text or click the Edit button (pencil).</string>
    <string name="import_notes">Import notes</string>
    <string name="import_notes_instructions">Place text files to import at:\n</string>
    <string name="loading_external_file">Loading external files is not supported</string>
    <string name="no_external_storage">Can\'t access external storage. Try restarting your device.</string>
    <string name="no_notes_found">No notes found</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_exported_to">Note exported to</string>
    <string name="note_saved">Note saved</string>
    <string name="notes_deleted">Notes deleted</string>
    <string name="notes_exported_to">Notes exported to</string>
    <string name="notes_imported_successfully">Notes imported successfully</string>
    <string name="pref_title_show_dialogs">Ask before saving</string>
    <string name="send_to">Share note using&#8230;</string>
    <string name="view_note">View Note</string>
    <string name="action_install">Install</string>
    <string name="action_no_thanks">No Thanks</string>
    <string name="install_wear_plugin_title">Android Wear Plugin</string>
    <string name="install_wear_plugin_message">Notepad can save notes from your Android Wear device using the \"Ok Google, take a note\" command. This requires a separate plugin to be installed.\n\nInstall Notepad Plugin for Android Wear?</string>
    <string name="congratulations">Congratulations! Notepad Plugin for Android Wear setup is now complete.\n\nTo take a note to save in Notepad, say \"Ok Google, take a note\". Your note will automatically be saved in the Notepad app on your device.</string>
    <string name="pref_title_show_date">Show date/time</string>
    <string name="action_theme">Theme</string>

    <string-array name="sort_by_list">
        <item>Date (most recent first)</item>
        <item>Name (A to Z)</item>
    </string-array>
    <string-array name="theme_list">
        <item>Light / sans serif</item>
        <item>Light / serif</item>
        <item>Light / monospace</item>
        <item>Dark / sans serif</item>
        <item>Dark / serif</item>
        <item>Dark / monospace</item>
    </string-array>

</resources>
