<!--
     Copyright 2014 Braden Farmer

      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
  
           http://www.apache.org/licenses/LICENSE-2.0
  
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/action_settings" >

    <ListPreference
        android:defaultValue="date"
        android:entries="@array/sort_by_list"
        android:entryValues="@array/sort_by_list_values"
        android:key="sort_by"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/action_sort_by" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="show_dialogs"
        android:title="@string/pref_title_show_dialogs" />

    <Preference
        android:key="import"
        android:title="@string/import_notes" >
    </Preference>
    <Preference
        android:key="about"
        android:title="@string/dialog_about_title" >
    </Preference>

</PreferenceScreen>
